# sps

./: .gitignore  .gitmodules  README.md  _sps  _spu  build.sh  hellorust.sbp.tar.xz  hellorust.ssp.tar.xz  planning
.github/workflows/: rust.yml
hello-1.0-0.ssp/: spu_build
hellorust/: spu_build
hellorust/hellorust/: Cargo.toml
sps/: .gitignore  Cargo.toml  dub.json
sps.rust/src/: repo.rs
sps/source/: main.d  main.d-
sps/src/: main.rs  repo.rs
spu/: Cargo.toml
spu/src/: main.rs
testing/: hello-1.0-0.sbp.tar.xz  hello-1.0-0.ssp.tar.xz  hello-1.1-0.sbp.tar.xz  hello-1.1-0.ssp.tar.xz  hellorust.tar.zst  test_pkg.sbp.tar.xz
testing/hello-1.0-0.ssp/: meta.toml
testing/hellorust/hr/: config.toml  meta.toml
testing/hellorust/hr/hellorust/src/: main.rs
testing/repo/: repo.toml
testing/repo/dte/0/0.1.0/: config.toml  meta.toml
testing/repo/dte/0/0.1.0/0/: README.md  sps_build.sh
testing/repo/dte/0/0.1.0/1/: .gitmodules  sps_build.sh
testing/test_pkg/: meta.toml
