[package]
name = "spu"
version = "0.1.0"
authors = ["Sam Smith <sam.henning.smith@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
glob = "0.3.0"
fs2 = "0.4.3"
bincode = "1.3.1"
quest = "0.3.0"
